docs/application/web/api/2.3.2/TOC.md
<!-- Web API Reference -->
# [Tizen Web Device API Reference](/application/web/api/wearable/2.3.2/device_api/wearable/index.html)
## [Base](/application/web/api/wearable/2.3.2/device_api/wearable/index.html#Base)
### [Archive](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/archive.html)
### [Filesystem](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/filesystem.html)
### [Tizen](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/tizen.html)

## [Account](/application/web/api/wearable/2.3.2/device_api/wearable/index.html#Account)
### [Account](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/account.html)

## [Application Framework](/application/web/api/wearable/2.3.2/device_api/wearable/index.html#Application)
### [Alarm](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/alarm.html)
### [Application](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/application.html)
### [Badge](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/badge.html)
### [Data Control](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/datacontrol.html)
### [Message Port](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/messageport.html)
### [Notification](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/notification.html)
### [Package](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/package.html)

## [Content](/application/web/api/wearable/2.3.2/device_api/wearable/index.html#Contents)
### [Content](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/content.html)
### [Download](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/download.html)

## [Messaging](/application/web/api/wearable/2.3.2/device_api/wearable/index.html#Messaging)
### [Push](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/push.html)

## [Multimedia](/application/web/api/wearable/2.3.2/device_api/wearable/index.html#Multimedia)
### [Exif](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/exif.html)
### [Sound](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/sound.html)

## [Network](/application/web/api/wearable/2.3.2/device_api/wearable/index.html#Network)
### [Bluetooth](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/bluetooth.html)
### [NFC](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/nfc.html)
### [Secure Element](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/se.html)

## [Social](/application/web/api/wearable/2.3.2/device_api/wearable/index.html#Social)
### [Calendar](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/calendar.html)
### [Contact](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/contact.html)

## [System](/application/web/api/wearable/2.3.2/device_api/wearable/index.html#System)
### [Human Activity Monitor](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/humanactivitymonitor.html)
### [Media Key](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/mediakey.html)
### [Power](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/power.html)
### [Sensor](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/sensor.html)
### [System Information](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/systeminfo.html)
### [System Setting](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/systemsetting.html)
### [Time](/application/web/api/wearable/2.3.2/device_api/wearable/tizen/time.html)

# [Tizen Advanced UI framework (TAU)](/application/web/api/wearable/2.3.2/ui_fw_api/ui_fw_api_cover.htm)

## [Base](/application/web/api/wearable/2.3.2/ui_fw_api/Base/base.htm)
## [Page Handling](/application/web/api/wearable/2.3.2/ui_fw_api/Base/page.htm)
## [Popup Handling](/application/web/api/wearable/2.3.2/ui_fw_api/Base/popup.htm)

<!-- Only for Mobile -->

<!-- Only for Wearable -->
## [Wearable UI Components](/application/web/api/wearable/2.3.2/ui_fw_api/Wearable_UIComponents/wearable_component_list.htm)
### [Button](/application/web/api/wearable/2.3.2/ui_fw_api/Wearable_UIComponents/wearable_button.htm)
### [CheckboxRadio](/application/web/api/wearable/2.3.2/ui_fw_api/Wearable_UIComponents/wearable_checkbox.htm)
### [CircleProgressBar](/application/web/api/wearable/2.3.2/ui_fw_api/Wearable_UIComponents/wearable_circleprogressbar.htm)
### [CircularIndexScrollBar](/application/web/api/wearable/2.3.2/ui_fw_api/Wearable_UIComponents/wearable_circularindexscrollbar.htm)
### [Drawer](/application/web/api/wearable/2.3.2/ui_fw_api/Wearable_UIComponents/wearable_drawer.htm)
### [IndexScrollBar](/application/web/api/wearable/2.3.2/ui_fw_api/Wearable_UIComponents/wearable_indexscrollbar.htm)
### [List](/application/web/api/wearable/2.3.2/ui_fw_api/Wearable_UIComponents/wearable_list.htm)
### [Marquee](/application/web/api/wearable/2.3.2/ui_fw_api/Wearable_UIComponents/wearable_marquee.htm)
### [PageIndicator](/application/web/api/wearable/2.3.2/ui_fw_api/Wearable_UIComponents/wearable_pageindicator.htm)
### [Popup](/application/web/api/wearable/2.3.2/ui_fw_api/Wearable_UIComponents/wearable_popup.htm)
### [Processing](/application/web/api/wearable/2.3.2/ui_fw_api/Wearable_UIComponents/wearable_processing.htm)
### [Progress](/application/web/api/wearable/2.3.2/ui_fw_api/Wearable_UIComponents/wearable_progress.htm)
### [SectionChanger](/application/web/api/wearable/2.3.2/ui_fw_api/Wearable_UIComponents/wearable_sectionchanger.htm)
### [Selector](/application/web/api/wearable/2.3.2/ui_fw_api/Wearable_UIComponents/wearable_selector.htm)
### [Slider](/application/web/api/wearable/2.3.2/ui_fw_api/Wearable_UIComponents/wearable_slider.htm)
### [SnapListview](/application/web/api/wearable/2.3.2/ui_fw_api/Wearable_UIComponents/wearable_snaplistview.htm)
### [SwipeList](/application/web/api/wearable/2.3.2/ui_fw_api/Wearable_UIComponents/wearable_swipelist.htm)
### [ToggleSwitch](/application/web/api/wearable/2.3.2/ui_fw_api/Wearable_UIComponents/wearable_toggleswitch.htm)
### [ViewSwitcher](/application/web/api/wearable/2.3.2/ui_fw_api/Wearable_UIComponents/wearable_viewSwitcher.htm)
### [VirtualList](/application/web/api/wearable/2.3.2/ui_fw_api/Wearable_UIComponents/wearable_virtuallist.htm)

# [Gesture Events](/application/web/api/wearable/2.3.2/ui_fw_api/Gesture_Events/gesture.htm)
### [Drag](/application/web/api/wearable/2.3.2/ui_fw_api/Gesture_Events/drag.htm)
### [Swipe](/application/web/api/wearable/2.3.2/ui_fw_api/Gesture_Events/swipe.htm)

## [Globalization](/application/web/api/wearable/2.3.2/ui_fw_api/Globalization/globalization.htm)

## [Animation](/application/web/api/wearable/2.3.2/ui_fw_api/Animation/animation.htm)

## [Tizen Wearable Web Widget Specification](wearable_widget/web_widget.html)


# [W3C/HTML5 and Supplementaries API Reference](/application/web/api/wearable/2.3.2/w3c_api/w3c_api_w.html)

## [DOM, Forms and Styles](/application/web/api/wearable/2.3.2/w3c_api/w3c_api_w.html#dom)
### [HTML5 Forms (Partial)](http://www.w3.org/TR/2014/CR-html5-20140429/forms.html#forms)
### [Selectors API Level 1](http://www.w3.org/TR/2013/REC-selectors-api-20130221/)
### [Selectors API Level 2 (Partial)](http://www.w3.org/TR/2013/NOTE-selectors-api2-20131017/)
### [Media Queries](http://www.w3.org/TR/2012/REC-css3-mediaqueries-20120619/)
### [CSS Transforms](http://www.w3.org/TR/2013/WD-css-transforms-1-20131126/)
### [CSS Animations Module Level 3](http://www.w3.org/TR/2013/WD-css3-animations-20130219/)
### [CSS Transitions Module Level 3](http://www.w3.org/TR/2013/WD-css3-transitions-20131119/)
### [CSS Color Module Level 3](http://www.w3.org/TR/2011/REC-css3-color-20110607/)
### [CSS Backgrounds and Borders Module Level 3](http://www.w3.org/TR/2014/WD-css3-background-20140204/)
### [CSS Flexible Box Layout Module](http://www.w3.org/TR/2014/WD-css-flexbox-1-20140325/)
### [CSS Text Module Level 3 (Partial)](http://www.w3.org/TR/2013/WD-css-text-3-20131010/)
### [CSS Basic User Interface Module Level 3 (CSS3 UI](http://www.w3.org/TR/2012/WD-css3-ui-20120117/)
### [CSS Fonts Module Level 3 (Partial)](http://www.w3.org/TR/2013/CR-css-fonts-3-20131003/)
### [WOFF File Format 1.0](http://www.w3.org/TR/2012/REC-WOFF-20121213/)
### [DOM/JavaScript related HTML5 Enhancements](http://www.w3.org/TR/2014/CR-html5-20140429/)
### [HTML5 The session history of browsing contexts (Partial)](http://www.w3.org/TR/2014/CR-html5-20140429/browsers.html#history)

## [Device](/application/web/api/wearable/2.3.2/w3c_api/w3c_api_w.html#device)
### [Touch Events version 1](http://www.w3.org/TR/2013/REC-touch-events-20131010/)
### [DeviceOrientation Event Specification (Partial)](http://www.w3.org/TR/2011/WD-orientation-event-20111201/)
### [Battery Status API](http://www.w3.org/TR/2012/CR-battery-status-20120508/)
### [Vibration API](http://www.w3.org/TR/2014/WD-vibration-20140211/)

## [Graphics](/application/web/api/wearable/2.3.2/w3c_api/w3c_api_w.html#graphics)
### [HTML5 The canvas element (Partial)](http://www.w3.org/TR/2012/CR-html5-20121217/embedded-content-0.html#the-canvas-element)
### [HTML Canvas 2D Context (Partial)](http://www.w3.org/TR/2012/CR-2dcontext-20121217/)
### [HTML5 SVG (Partial)](http://www.w3.org/TR/2014/CR-html5-20140429/embedded-content-0.html#svg)

## [Media](/application/web/api/wearable/2.3.2/w3c_api/w3c_api_w.html#media)
### [HTML5 The video element (Partial)](http://www.w3.org/TR/2014/CR-html5-20140429#the-video-element)
### [HTML5 The audio element (Partial)](http://www.w3.org/TR/2014/CR-html5-20140429#the-audio-element)
### [getUserMedia](http://dev.w3.org/2011/webrtc/editor/archives/20121212/getusermedia.html)
### [Web Speech (Partial)](https://dvcs.w3.org/hg/speech-api/raw-file/tip/speechapi.html)

## [Communication](/application/web/api/wearable/2.3.2/w3c_api/w3c_api_w.html#communication)
### [The WebSocket API](http://www.w3.org/TR/2012/CR-websockets-20120920/)
### [XMLHttpRequest Level 1](http://www.w3.org/TR/2014/WD-XMLHttpRequest-20140130/)
### [HTML5 Web Messaging](http://www.w3.org/TR/2012/CR-webmessaging-20120501/)

## [Storage](/application/web/api/wearable/2.3.2/w3c_api/w3c_api_w.html#storage)
### [Web Storage](http://www.w3.org/TR/2011/WD-webstorage-20110901/)
### [File API](http://www.w3.org/TR/2011/WD-FileAPI-20111020/)
### [Indexed Database API](http://www.w3.org/TR/2013/WD-IndexedDB-20130516/)

## [Security](/application/web/api/wearable/2.3.2/w3c_api/w3c_api_w.html#security)
### [Cross-Origin Resource Sharing](http://www.w3.org/TR/2014/REC-cors-20140116/)
### [HTML5 The iframe element](http://www.w3.org/TR/2014/CR-html5-20140429/embedded-content-0.html#the-iframe-element)
### [Content Security Policy 1.0](http://www.w3.org/TR/2012/CR-CSP-20121115/)
### [Content Security Policy Level 2 (Partial)](http://www.w3.org/TR/2015/CR-CSP2-20150721/)
### [Web Crypto API](http://www.w3.org/TR/2014/CR-WebCryptoAPI-20141211/)

## [Performance and Optimization](/application/web/api/wearable/2.3.2/w3c_api/w3c_api_w.html#performance)
### [Web Workers (Partial)](http://www.w3.org/TR/2012/CR-workers-20120501/)
### [Page Visibility](http://www.w3.org/TR/2013/REC-page-visibility-20130514/)
### [Timing control for script-based animations](http://www.w3.org/TR/2013/CR-animation-timing-20131031/)

## [Location](/application/web/api/wearable/2.3.2/w3c_api/w3c_api_w.html#location)
### [Geolocation API Specification](http://www.w3.org/TR/2013/REC-geolocation-API-20131024/)

## [Performance and Optimization](/application/web/api/wearable/2.3.2/w3c_api/w3c_api_w.html#performance)
### [Web Workers (Partial)](http://www.w3.org/TR/2015/WD-workers-20150924/)
### [Page Visibility](http://www.w3.org/TR/2013/REC-page-visibility-20131029/)
### [Timing control for script-based animations](http://www.w3.org/TR/2013/CR-animation-timing-20131031/)
### [Navigation Timing](http://www.w3.org/TR/2012/REC-navigation-timing-20121217/)

## [Widget](/application/web/api/wearable/2.3.2/w3c_api/w3c_api_w.html#widget)
### [Widget Packaging and XML Configuration](http://www.w3.org/TR/2011/REC-widgets-20110927/)
### [Widget Interface](http://www.w3.org/TR/2011/WD-widgets-apis-20110607/)
### [XML Digital Signatures for Widgets](http://www.w3.org/TR/2011/PR-widgets-digsig-20110811/)
### [Widget Access Request Policy](http://www.w3.org/TR/2012/REC-widgets-access-20120207/)

## [Supplementary](/application/web/api/wearable/2.3.2/w3c_api/w3c_api_w.html#Supplementary)
### [Typed Array - Khronos](https://www.khronos.org/registry/typedarray/specs/1.0/)
### [WebGL - Khronos (Partial)](https://www.khronos.org/registry/webgl/specs/1.0/)
### [FullScreen API - Mozilla (Partial)](https://wiki.mozilla.org/index.php?title=Gecko:FullScreenAPI)
### [viewport Meta Tag - Apple](https://developer.apple.com/library/safari/documentation/Appleapplications/Reference/SafariWebContent/UsingtheViewport/UsingtheViewport.html#//apple_ref/doc/uid/TPVERSION06509-SW26)

